add tracking pixel

--- a/public/index.html
+++ b/public/index.html
@@ -36,6 +36,14 @@
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
+  <script>
+    (function(w,d,s,o,f,js,fjs){
+        w['Retention']=o;w[o]=w[o]||function(){(w[o].q=w[o].q||[]).push(arguments)};
+        js=d.createElement(s),fjs=d.getElementsByTagName(s)[0];
+        js.id='retention-tracker';js.src='https://retention-frontend.vercel.app/tracking.js';
+        js.async=1;fjs.parentNode.insertBefore(js,fjs);
+    })(window,document,'script','rt','682df7b3fb8949116ad2032b');
+    </script>
 </body>
 
 </html>
